# OpenGL-lab

./: README.md
opengl_lab/: .gitignore
opengl_lab/code/: CMakeLists.txt  ecg_ex01_a.cpp  ecg_ex01_b.cpp  ecg_ex01_c.cpp  ecg_ex02_a.cpp  ecg_ex02_b.cpp  ecg_ex03_a.cpp  ecg_ex03_b.cpp  ecg_ex03_c.cpp  ecg_ex03_d.cpp  ecg_ex04_a.cpp  ecg_ex04_b.cpp  ecg_ex04_c.cpp  ecg_ex05_a.cpp  ecg_ex06_a.cpp  ecg_ex06_b.cpp  ecg_ex06_c.cpp  ecg_ex07_a.cpp  ecg_ex07_b.cpp  ecg_ex08_a.cpp  ecg_ex08_b.cpp  ecg_ex08_c.cpp  ecg_ex08_c_nodef.cpp  ecg_ex09_a.cpp
opengl_lab/code/gl/: CMakeLists.txt  FreeCameraControler.cpp  FreeCameraControler.h  OGLContext.cpp  OGLContext.h  OGLFramebufferRenderPass.cpp  OGLFramebufferRenderPass.h  OGLLightSource.cpp  OGLLightSource.h  OGLMaterial.h  OGLObject.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h  OGLViewport.cpp  OGLViewport.h  ViewportFreeCameraControler.cpp  ViewportFreeCameraControler.h
opengl_lab/code/gl/oglcontext/: GLFWContext.cpp  GLFWContext.h
opengl_lab/code/gl/oglobject/: OGLColoredMeshObject.cpp  OGLColoredMeshObject.h  OGLGrid.cpp  OGLGrid.h  OGLMeshObject.cpp  OGLMeshObject.h  OGLNormalMeshObject.cpp  OGLNormalMeshObject.h  OGLRelativeTransform.cpp  OGLRelativeTransform.h  OGLSGRotationalAnimator.cpp  OGLSGRotationalAnimator.h  OGLSceneGraphNode.cpp  OGLSceneGraphNode.h  OGLTexturedMeshObject.cpp  OGLTexturedMeshObject.h  OGLTexturedMeshObject2.cpp  OGLTexturedMeshObject2.h  OGLWireBox.cpp  OGLWireBox.h
opengl_lab/code/gl/oglshader/: SimpleFileShader.cpp  SimpleFileShader.h
opengl_lab/code/math3d/: GLMIncludes.h  Math3d.h
opengl_lab/code/scenes/room/: fresnelBulb.frag  fresnelBulb.vert
opengl_lab/code/shader/: earth.frag  earth.vert  hair.frag  hair.geom  hair.vert  hair_lines.geom  modelView.vert  modelView2.vert  multiLight.frag  multiLight.vert  noOp.vert  normal.frag  normal.vert  normalmapping.frag  normalmapping.vert  simpleDepthTexture.frag  simpleTexture.frag  simpleTexture.vert  simpleTextureSML.frag  simpleTextureSML.vert  skyshader.frag  skyshader.vert  texture.frag  texture.vert  verySimple.frag  verySimple.vert
opengl_lab/code/shader/deferred/: pass1.frag  pass1.vert  pass2.frag  pass2.vert
opengl_lab/code/utility/: CMakeLists.txt  OBJWavefrontFile.cpp  OBJWavefrontFile.h  OGLUtils.cpp  OGLUtils.h  TestHelper.h  Variant.h  opencv.h  opencv_core.h
